# derickson-token-use

./: .gitignore  Cargo.toml  README.md  install.sh  mac-filebeat-install.sh  mac-reprocess.sh  reset.sh  status.sh
deploy/: com.derickson.token-use-filebeat.plist  com.derickson.token-use.plist  filebeat-token-use.example.yml  filebeat-token-use.yml  token-use.service
src/: config.rs  daemon.rs  error.rs  main.rs  output.rs  record.rs  state.rs  tailer.rs
src/collector/: claude_code.rs  mod.rs
