[package]
name = "token-use"
version = "0.1.0"
edition = "2021"
description = "Per-call AI token-usage collector emitting NDJSON for Elasticsearch ingestion"
license = "MIT"

[[bin]]
name = "token-use"
path = "src/main.rs"

[dependencies]
notify-debouncer-full = "0.7"            # re-exports notify 8; FileIdMap for rename stitching
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
gethostname = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tempfile = "3"
walkdir = "2"
crossbeam-channel = "0.5"
dirs = "6"

[dev-dependencies]
serde_json = "1"

[profile.release]
lto = true
strip = true
